Closed
Bug 1617553
Opened 6 years ago
Closed 6 years ago
[Wayland] Activating DMA-BUF for WebGL has swapped color channels
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
RESOLVED
FIXED
mozilla75
| Tracking | Status | |
|---|---|---|
| firefox75 | --- | fixed |
People
(Reporter: kennylevinsen, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(3 files)
Reproduction on latest nightly:
- Force-enable OpenGL compositing.
- Enable
widget.wayland_dmabuf_webgl.enabled - Run WebGL aquarium test (https://webglsamples.org/aquarium/aquarium.html)
Tested on intel integrated graphics with sway/wlroots.
Observed result
Increased performance, but with swapped color channels (red/blue swap).
Expected result
Increased performance with same output.
| Reporter | ||
Comment 1•6 years ago
|
||
| Reporter | ||
Updated•6 years ago
|
Blocks: egl-linux-dmabuf
Flags: needinfo?(stransky)
| Assignee | ||
Comment 2•6 years ago
•
|
||
That's very interesting, Thanks. It's because I tested that on https://webglsamples.org/blob/blob.html where the colors are not so visible :)
Assignee: nobody → stransky
Flags: needinfo?(stransky)
Comment 3•6 years ago
|
||
I can reproduce this with OpenGL layers, but not basic layers or WebRender.
| Assignee | ||
Comment 4•6 years ago
|
||
I expect it may be also broken in gl compositor when "widget.wayland_dmabuf_textures.enabled" is set to true.
| Assignee | ||
Comment 5•6 years ago
|
||
Pushed by btara@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/83c66ad3ea49
[Wayland] Use GL texture format instead of surface one for GL texture source, r=sotaro
| Reporter | ||
Comment 7•6 years ago
|
||
Confirmed to also affect widget.wayland_dmabuf_textures.enabled
Comment 8•6 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 6 years ago
status-firefox75:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in
before you can comment on or make changes to this bug.
Description
•