Bug 1617553 [Wayland] Use GL texture format instead of surface one for GL texture source, r=sotaro

Differential Revision: https://phabricator.services.mozilla.com/D63836